2024-03-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news.

	* www/index.rst: GraphicsMagick is released on March 23, 2024.

	* www/Changes.rst: 1.3.43 is released in 2024.

	* version.sh: Update library versioning in preparation for
	release.

2024-03-17  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat: Enable additional logging
	with setting "set MAGICK_DEBUG=exception".

2024-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/tests/runtest.bat: Remove tests for format
	identifiers which are not even images, or require special add-on
	software, or could otherwise not work.

	* tests/constitute.c: Handle capital 'Y' and 'K' while checking if
	a CMYK map is specified.

	* VisualMagick/tests/run_constitute.bat: Re-generate test script
	based on what current tests/constitute.tap does.

	* VisualMagick/bin/log-eventlog.mgk: Logger configuration suitable
	for non-console apps (was log.mgk).

	* VisualMagick/bin/log.mgk: Change default configuration to be
	suitable for 'console' apps with working 'stderr', such as used by
	the test suite.

2024-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news.

	* www/api/types.rst: Fix spelling errors and out-of-date
	information in types.rst.  Resolves SourceForge patch #80 "Update
	types.rst documentation".

2024-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickPingImage, MagickReadImage)
	(MagickReadImageBlob, MagickReadImageFile): AppendImageToList()
	now leaves the image pointer pointing to the end of the list.  The
	Wand implementation expects that wand->images points to the
	begining of the list.  Update wand->images to point to the
	beginning of the list.  Resolves SourceForge issue #735
	"[MagickWand] Potential regression when creating GIFs".

2024-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am: Give up on the attempt to selectively