@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020240321"
-#define public MagickPackageReleaseDate "snapshot-20240321"
+#define public MagickPackageVersionAddendum ".020240322"
+#define public MagickPackageReleaseDate "snapshot-20240322"
