@@ -1,3 +1,7 @@
+2024-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* PerlMagick/t/{read.t, write.t}: Update expected TGA signatures.
+
 2024-03-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* NEWS.txt: Update the news.
